04-terraform-vpc/non-standard-vpc/security-groups.tf
resource "aws_security_group" "vpc-ssh"{
    name        = "vpc-ssh"
    description = "Allow SSH inbound traffic"
    vpc_id      = module.vpc.vpc_id

    ingress {
        description = "SSH from VPC"
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port        = 0
        to_port          = 0
        protocol         = "-1"
        cidr_blocks      = ["0.0.0.0/0"]
        ipv6_cidr_blocks = ["::/0"]
    }

}

resource "aws_security_group" "vpc-web"{
    name        = "vpc-web"
    description = "Allow HTTP inbound traffic"
    vpc_id      = module.vpc.vpc_id

    ingress {
        description = "HTTP from VPC"
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port        = 0
        to_port          = 0
        protocol         = "-1"
        cidr_blocks      = ["0.0.0.0/0"]
        ipv6_cidr_blocks = ["::/0"]
    }

}
